--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,7 @@
 body {
     margin: 0;
     font-family: "YuGothic", "Hiragino Kaku Gothic ProN", sans-serif;
-    color: #483d8b;
+    color: #555555;
 }
 
 a {
